ok docker-compose

--- a/.env.test
+++ b/.env.test
@@ -18,7 +18,4 @@ APP_ENV=dev
 APP_SECRET=0e4e2347bffeb5a9dba8d4fac167bd00
 ###< symfony/framework-bundle ###
 
-DB_NAME=symfony
-DB_USER=symfony
-DB_PASSWORD=symfony
-DB_ROOT_PASSWORD=password
+DATABASE_URL="sqlite:///:memory:"
