--- a/composer.json
+++ b/composer.json
@@ -58,11 +58,12 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": false,
+            "allow-contrib": true,
             "require": "5.3.*"
         }
     },
     "require-dev": {
+        "dama/doctrine-test-bundle": "^6.6",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "^5.3",
         "symfony/css-selector": "^5.3",
