--- a/.env
+++ b/.env
@@ -18,15 +18,51 @@ APP_ENV=dev
 APP_SECRET=0e4e2347bffeb5a9dba8d4fac167bd00
 ###< symfony/framework-bundle ###
 
-DB_NAME=symfony
-DB_USER=symfony
-DB_PASSWORD=symfony
-DB_ROOT_PASSWORD=password
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://$DB_USER:$DB_PASSWORD@127.0.0.1:33061/$DB_NAME?serverVersion=5.7"
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+### Documentation available at https://wodby.com/docs/stacks/drupal/local
+### Changelog can be found at https://github.com/wodby/docker4drupal/releases
+### Images tags format explained at https://github.com/wodby/docker4drupal#images-tags
+
+### PROJECT SETTINGS
+
+PROJECT_NAME=medal
+PROJECT_BASE_URL=medal.docker.localhost
+PROJECT_DOCROOT=/home/claudiocenghialta/side-projects/olympic-medal-count/backend
+
+### --- DOCKER-COMPOSE SETTINGS ----
+
+COMPOSE_PROJECT_NAME=medal
+
+### --- EXTRA SERVICES CONTAINER ---
+
+# Set Traefik "ON" if you want to use a traefik dedicated to project.
+# Otherwise if you have a global traefik, set OFF.
+TRAEFIK=ON
+# Set Xdebug "ON" for activate the debug system for PHP.
+XDEBUG=ON
+
+### --- DATABASE SETTINGS ----
+
+DB_NAME=symfony
+DB_USER=symfony
+DB_PASSWORD=symfony
+DB_ROOT_PASSWORD=password
+DB_HOST=db
+DB_PORT=33066
+DB_DRIVER=mysql
+
+### --- IMAGES VERSIONS ----
+
+APACHE_TAG=2.4-4.4.4
+MARIADB_TAG=10.5-3.12.5
+PHP_MACOS_TAG=8.0-dev-macos-4.21.9
+PHP_TAG=8.0-dev-4.21.9
+REDIS_TAG=6-3.7.6
+
