--- a/.env.test
+++ b/.env.test
@@ -14,7 +14,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=test
 APP_SECRET=0e4e2347bffeb5a9dba8d4fac167bd00
 ###< symfony/framework-bundle ###
 
