fix error with test Database

--- a/.env.test
+++ b/.env.test
@@ -18,4 +18,4 @@ APP_ENV=test
 APP_SECRET=0e4e2347bffeb5a9dba8d4fac167bd00
 ###< symfony/framework-bundle ###
 
-DATABASE_URL="sqlite:///:memory:"
+# DATABASE_URL="sqlite:///:memory:"
