--- a/.env
+++ b/.env
@@ -24,6 +24,7 @@ APP_SECRET=0e4e2347bffeb5a9dba8d4fac167bd00
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
+DATABASE_URL=mysql://$DB_USER:$DB_PASSWORD@$DB_HOST:3306/$DB_NAME
 ###< doctrine/doctrine-bundle ###
 
 ### Documentation available at https://wodby.com/docs/stacks/drupal/local
