--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
       DB_ROOT_PASSWORD: $DB_ROOT_PASSWORD
       DB_NAME: $DB_NAME
       DB_DRIVER: $DB_DRIVER
-      DATABASE_URL: mysql://$DB_USER:$DB_PASSWORD@$DB_HOST:3306/$DB_NAME
+      # DATABASE_URL: mysql://$DB_USER:$DB_PASSWORD@$DB_HOST:3306/$DB_NAME
       
 
       PHP_FPM_USER: wodby
