--- a/.env
+++ b/.env
@@ -67,3 +67,7 @@ PHP_MACOS_TAG=8.0-dev-macos-4.21.9
 PHP_TAG=8.0-dev-4.21.9
 REDIS_TAG=6-3.7.6
 
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
