--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "fakerphp/faker": "^1.15",
         "nelmio/cors-bundle": "^2.1",
         "phpdocumentor/reflection-docblock": "^5.2",
+        "symfony/apache-pack": "^1.0",
         "symfony/asset": "5.3.*",
         "symfony/console": "5.3.*",
         "symfony/dotenv": "5.3.*",
