--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       MYSQL_USER: $DB_USER
       MYSQL_PASSWORD: $DB_PASSWORD
     ports:
-      - '${DB_PORT}:3306'
+      - "${DB_PORT}:3306"
 
   php:
     image: wodby/php:$PHP_TAG
