--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,6 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+swagger_ui:
+  path: /
+  controller: api_platform.swagger.action.ui
